--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bookmarklets",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "node tools/convert.mjs"
   },
   "author": "Jeff Jacobson",
   "license": "Unlicense",
