--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "semi-style": "error",
         "indent": [
             "error",
             4
