--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prepare": "node tools/build.mjs",
-    "lint": "eslint **/*.ts --fix",
-    "markdown": "node tools/convert.mjs"
+    "prepare": "ts-node --esm tools/build.mts",
+    "publish": "ts-node --esm tools/publish.mts",
+    "lint": "eslint **/*.ts --fix"
   },
   "author": "Jeff Jacobson",
   "license": "Unlicense",
@@ -21,15 +21,21 @@
   "bugs": {
     "url": "https://github.com/JeffJacobson/bookmarklets/issues"
   },
-  "homepage": "https://github.com/JeffJacobson/bookmarklets#readme",
+  "homepage": "https://jeffjacobson.github.io/bookmarklets",
   "devDependencies": {
+    "@types/gh-pages": "^3.2.1",
+    "@types/jsdom": "^20.0.0",
+    "@types/node": "^18.7.6",
     "@types/semver": "^7.3.12",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "esbuild": "^0.14.53",
     "eslint": "^8.14.0",
+    "gh-pages": "^4.0.0",
+    "jsdom": "^20.0.0",
     "minify": "^9.1.0",
     "semver": "^7.3.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
